# littleray

./: .gitignore  CMakeLists.txt  Context.cpp  Context.h  ContextFactory.cpp  ContextFactory.h  Display.cpp  Display.h  Light.cpp  LightFactory.cpp  Makefile  Material.cpp  Material.h  MaterialFactory.cpp  ObjectFactory.cpp  ObjectFactory.h  PhongMaterial.cpp  PhongMaterial.h  Pixel.cpp  Pixel.h  Point.cpp  Ray.h  Scene.cpp  Scene.h  SceneFactory.cpp  SceneFactory.h  Sphere.cpp  Sphere.h  Vector.cpp  Vector.h  raytrace.h  raytracer.cpp  scene.xml
Antialiaser/: Antialiaser.cpp  Antialiaser.h  FakeAntialiaser.cpp  FakeAntialiaser.h  Supersampler16x.cpp  Supersampler16x.h  Supersampler4x.h
Antialiasers/: Antialiaser.h  AntialiaserFactory.h  Supersampler4x.cpp
Default/: makefile  objects.mk  sources.mk  subdir.mk
Default/Factories/: subdir.mk
Default/Materials/: subdir.mk
Default/Objects/: subdir.mk
Default/xml/: subdir.mk
Displays/: Display.h  DisplayFactory.cpp  DisplayFactory.h  FakeDisplay.cpp  FakeDisplay.h  SDLDisplay.cpp  SDLDisplay.h
Factories/: AntialiaserFactory.cpp  AntialiaserFactory.h  LightFactory.h  MaterialFactory.cpp  MaterialFactory.h  MaterialPropertyFactory.cpp  SceneFactory.cpp  SceneFactory.h  SphereFactory.cpp
Lights/: Light.cpp  Light.h  LightFactory.cpp  LightFactory.h  Ray.cpp  Ray.h
Materials/: BlinnPhongMaterial.cpp  BlinnPhongMaterial.h  BlinnProperty.cpp  BlinnProperty.h  LambertProperty.cpp  LambertProperty.h  Material.cpp  Material.h  MaterialFactory.cpp  MaterialFactory.h  MaterialProperty.h  MaterialPropertyFactory.cpp  MaterialPropertyFactory.h  PhongMaterial.cpp  PhongMaterial.h  PhongProperty.cpp  PhongProperty.h
Maths/: Point.cpp  Point.h  Vector.cpp  Vector.h
Objects/: Object.h  ObjectFactory.cpp  ObjectFactory.h  Sphere.cpp  Sphere.h  SphereFactory.cpp  SphereFactory.h
tests/: Makefile  TestAntialiaser.cpp  TestAntialiaser.h  TestFakeAntialiaser.cpp  TestFakeAntialiaser.h  TestPixel.cpp  TestPixel.h  TestPoint.cpp  TestPoint.h  TestVector.cpp  TestVector.h
tests/scripted/: main.sh
xml/: Makefile
